# mate-dock-applet

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config.status  configure  configure.ac  py-compile
.github/: FUNDING.yml
autom4te.cache/: output.3  requests  traces.2  traces.3
po/: LINGUAS  Makevars  POTFILES.in  en.mo  en.po  es.mo  es.po  fr.po  ka.po  mate-dock-applet.pot  update-pot.sh
src/: Makefile  Makefile.am  Makefile.in  app_match.xml  config.py.in  dock.in  dock.py  dock_about.in  dock_about.py  dock_action_list.in  dock_action_list.py  dock_applet.in  dock_applet.py  dock_color_changer.in  dock_color_changer.py  dock_custom_launcher.in  dock_custom_launcher.py  dock_info.in  dock_info.py  dock_popup.in  dock_popup.py  dock_prefs.in  dock_prefs.py  dock_win_list.in  dock_win_list.py  dock_xml.in  dock_xml.py  docked_app.in  docked_app.py  docked_app_helpers.in  docked_app_helpers.py  dom_color.in  dom_color.py  log_it.in  org.mate.panel.DockApplet.mate-panel-applet.in  org.mate.panel.applet.DockAppletFactory.service  org.mate.panel.applet.DockAppletFactory.service.in  org.mate.panel.applet.dock.gschema.xml  window_control.in  window_control.py
src/.eric6project/: projecrt.e4q  projecrt.e4t
